# scrape-byllm

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  README.md  comparison.py  comparison_parameters.py  docs.html  example.jac  jac.toml  main.jac  main.py  pyproject.toml  requirements.txt  scraper.jac
lib/: fetch.jac  scrape.jac  scraper.jac  selenium_abs.jac
results/: comparison_absent_data.json  comparison_computed_value.json  comparison_dispersed_extract_all.json  comparison_distractor_contamination.json  comparison_format_ambiguity.json  comparison_implicit_relational.json  comparison_merged_table_headers.json  comparison_population_density.json  comparison_price_disambiguation.json  comparison_visual_encoding.json
results/formatted/: 20260629-1-results.md
scrape_byLLM/: __init__.jac  __init__.py  crawl.jac  direct_byllm.jac  executor.jac  fetch.jac  guard_fetch.py  guard_llm.py  planner.jac  presets.jac  scraper.jac
scrape_byllm/: __init__.jac  fetch.jac  planner.jac  scraper.jac
tests/: conftest.py  test_crawl.py  test_facade.py  test_fetch.py  test_guard_fetch.py  test_guard_llm.py  test_robots.py
